Add chn lang stuff

--- a/Assets/Resources/Lang/chn/Tutorial.txt
+++ b/Assets/Resources/Lang/chn/Tutorial.txt
@@ -1,2 +1,12 @@
 `~CP2_P1
-Good job! Now, you may have noticed already. The acceleration for your spaceship is different in each axis.
+做得好！現在，您可能已經注意到了。你的飛船的加速度在每個軸上都是不同的。
+`~CP2_P2
+因為飛船從來沒有被設計成在所有方向上均等地加速，這只會浪費寶貴的空間，所以通常最好將你的飛船朝著你想要加速的方向旋轉。
+`~CP2_P3
+看到那個主引擎了嗎？這就是為什麼你可以比任何其他方向更快地向前加速的原因。
+`~CP2_P4
+你可能還會注意到安裝在飛船表面的微型、集群的 6 個推進器。這些被稱為反應控制系統，簡稱 RCS。它們可以幫助您旋轉並朝不向前的方向移動。
+`~CP2_P5
+有趣的事實：RCS 推進器與主發動機完全不同，因為它們很小。
+`~CP2_P6
+由於空間限制和推力要求小，他們有時使用冷氣推進器。它基本上是完全基於壓力而不是可燃燃料運行的推進器。
