Added GPS into level1

--- a/Assets/Resources/Lang/chn/Level1.txt
+++ b/Assets/Resources/Lang/chn/Level1.txt
@@ -13,4 +13,10 @@
 `~JWST_P4
 例如對宇宙中一些最古老和最遙遠的物體和事件進行觀測，以及潛在適居住太陽系外行星的詳細大氣特徵。
 `~GPS_P1
-GPS
+全球定位系統，簡稱GPS，它可以為地球表面絕大部分地區提供準確的定位、測速和高精度的標準時間。
+`~GPS_P2
+全球定位系統可滿足位於全球地面任何一處或近地空間的軍事用戶連續且精確地確定三維位置、三維運動和時間的需求。
+`~GPS_P3
+最少只需4個衛星，就能迅速確定用戶端在地球上所處的位置及海拔高度；
+`~GPS_P4
+所能接收到的衛星訊號數越多，解碼出來的位置就越精確。
