fix tooltip and star text

--- a/Assets/Resources/Lang/chn/Stars.txt
+++ b/Assets/Resources/Lang/chn/Stars.txt
@@ -13,8 +13,8 @@
 `~Level1Star2
 2分鐘內完成關卡
 `~Level2Star0
-4分鐘內到達終點
+到達終點
 `~Level2Star1
-發現隱藏的物品
+以超過15m/s的速度到達終點
 `~Level2Star2
-2分鐘內完成關卡
+近距離飛越航行者1號
