--- a/Assets/Resources/Lang/eng/Stars.txt
+++ b/Assets/Resources/Lang/eng/Stars.txt
@@ -1,20 +1,20 @@
 `~CompletionCondition
 Completion Condition: 
 `~Level0Star0
-Reach The Finish
+Reach The Goal
 `~Level0Star1
 Collect All The Bonus Stars
 `~Level0Star2
 Complete The Level In Under 5 Minutes
 `~Level1Star0
-Reach The Finish In 4 Minutes
+Reach The Goal In 4 Minutes
 `~Level1Star1
 Destroy 200 Space Junks
 `~Level1Star2
 Complete The Level In Under 2 Minutes
 `~Level2Star0
-Reach The Finish In 4 Minutes
+Reach The Goal
 `~Level2Star1
-Find hidden objects
+Reach The Goal With More Than 15m/s
 `~Level2Star2
-Complete The Level In Under 2 Minutes
+Fly Past The Voyager1 Within A Close Distance
