--- a/Assets/Resources/Lang/eng/UI.txt
+++ b/Assets/Resources/Lang/eng/UI.txt
@@ -84,3 +84,9 @@ Speed
 Spinning speed
 `~Default
 Default
+`~LevelCompletedText
+Level Completed
+`~LevelScoreboardText
+Scoreboard
+`~TipRetryLevel
+Retry Level
